force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/XactlyExpress__XCCreditResultTracker__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>XCCreditResultTracker</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCCreditResultTrackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>