force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__AnnualAttainment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AnnualAttainment__c</fullName>
    <label>AnnualAttainment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>