force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__CreditRuleName__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CreditRuleName__c</fullName>
    <label>CreditRule</label>
    <length>240</length>
    <type>Text</type>
</CustomField>