force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__MonthlyAttainment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__MonthlyAttainment__c</fullName>
    <label>MonthlyAttainment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>