force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__OrgID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__OrgID__c</fullName>
    <label>OrgID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>