force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__Period__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Period__c</fullName>
    <label>Period</label>
    <type>Date</type>
</CustomField>