force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__ProfileID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProfileID__c</fullName>
    <label>ProfileID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>