force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__QTDMonthlyAttainment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__QTDMonthlyAttainment__c</fullName>
    <label>QTDMonthlyAttainment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>