force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__QTDMonthlyQuota__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__QTDMonthlyQuota__c</fullName>
    <label>QTDMonthlyQuota</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>