force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__QuarterlyAttainment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__QuarterlyAttainment__c</fullName>
    <label>QuarterlyAttainment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>