force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__UserEmail__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__UserEmail__c</fullName>
    <label>UserEmail</label>
    <length>90</length>
    <type>Text</type>
</CustomField>