force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__UserRole__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__UserRole__c</fullName>
    <label>UserRole</label>
    <length>240</length>
    <type>Text</type>
</CustomField>