force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__YTDMonthlyQuota__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__YTDMonthlyQuota__c</fullName>
    <label>YTDMonthlyQuota</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>