force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/fields/XactlyExpress__YTDQuarterlyQuota__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__YTDQuarterlyQuota__c</fullName>
    <label>YTDQuarterlyQuota</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>