force-app/main/default/objects/XactlyExpress__XCCreditResultTracker__c/listViews/XactlyExpress__All.listView-meta.xml
<ListView>
    <fullName>XactlyExpress__All</fullName>
    <columns>XactlyExpress__YTDCredit__c</columns>
    <columns>XactlyExpress__AnnualAttainment__c</columns>
    <columns>XactlyExpress__AnnualQuota__c</columns>
    <columns>XactlyExpress__CreditRuleName__c</columns>
    <columns>XactlyExpress__orgName__c</columns>
    <columns>XactlyExpress__Period__c</columns>
    <columns>XactlyExpress__PlanName__c</columns>
    <columns>XactlyExpress__UserEmail__c</columns>
    <columns>XactlyExpress__UserFirstName__c</columns>
    <columns>XactlyExpress__UserLastName__c</columns>
    <columns>XactlyExpress__UserRole__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>